--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5288,30 +5288,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.23s; animation-duration: 1.3s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.17s; animation-duration: 0.95s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.67s; animation-duration: 0.82s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.79s; animation-duration: 1s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.19s; animation-duration: 0.76s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.35s; animation-duration: 0.61s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.62s; animation-duration: 1.14s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.79s; animation-duration: 0.96s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.06s; animation-duration: 0.72s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.3s; animation-duration: 0.91s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: -0.02s; animation-duration: 1.46s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.18s; animation-duration: 0.73s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.7s; animation-duration: 1.5s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.23s; animation-duration: 0.69s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.44s; animation-duration: 1.21s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: -0.1s; animation-duration: 1.57s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.45s; animation-duration: 1.28s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.57s; animation-duration: 0.87s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.31s; animation-duration: 1.38s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.14s; animation-duration: 1.11s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: -0.05s; animation-duration: 1.28s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.11s; animation-duration: 0.67s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.62s; animation-duration: 0.89s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: -0.01s; animation-duration: 0.7s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.31s; animation-duration: 1.18s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.05s; animation-duration: 1.45s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.5s; animation-duration: 1.03s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.13s; animation-duration: 1.49s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.55s; animation-duration: 1.3s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.16s; animation-duration: 1.44s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.58s; animation-duration: 1.55s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.09s; animation-duration: 1.34s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.69s; animation-duration: 1.07s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.75s; animation-duration: 0.78s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.59s; animation-duration: 1.58s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.08s; animation-duration: 1.09s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5382,10 +5382,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.55s; animation-duration: 1.1s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.34s; animation-duration: 1.05s; }
-.line-scale-party > div:nth-child(3) { animation-delay: -0.06s; animation-duration: 1.05s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.16s; animation-duration: 0.78s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.75s; animation-duration: 0.58s; }
+.line-scale-party > div:nth-child(2) { animation-delay: -0.17s; animation-duration: 1.15s; }
+.line-scale-party > div:nth-child(3) { animation-delay: -0.12s; animation-duration: 1.19s; }
+.line-scale-party > div:nth-child(4) { animation-delay: -0.06s; animation-duration: 0.35s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
@@ -5463,7 +5463,7 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 
 .menu-expansion { background-color: #1bb1a2; border: 0px; position: relative; }
 
-.menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: 100%; position: fixed; }
+.menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: 100%; position: fixed; box-shadow: 3px -3px #d0d0d0; }
 .menu-container a { text-decoration: none !important; color: black; font-size: 13px; }
 .menu-container li { padding: 10px 0px 10px 50px; margin: 0px; }
 .menu-container li:hover { background: #dadada; transition: all 0.3s ease; }
