--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5288,30 +5288,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.3s; animation-duration: 0.91s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: -0.02s; animation-duration: 1.46s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.18s; animation-duration: 0.73s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.7s; animation-duration: 1.5s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.23s; animation-duration: 0.69s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.44s; animation-duration: 1.21s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: -0.1s; animation-duration: 1.57s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.45s; animation-duration: 1.28s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.57s; animation-duration: 0.87s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.22s; animation-duration: 1.15s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.25s; animation-duration: 1.12s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.01s; animation-duration: 0.77s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.32s; animation-duration: 0.68s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.45s; animation-duration: 0.97s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.43s; animation-duration: 1.27s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.61s; animation-duration: 0.97s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: -0.06s; animation-duration: 1.54s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.45s; animation-duration: 1.26s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.13s; animation-duration: 1.49s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.55s; animation-duration: 1.3s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.16s; animation-duration: 1.44s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.58s; animation-duration: 1.55s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.09s; animation-duration: 1.34s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.69s; animation-duration: 1.07s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.75s; animation-duration: 0.78s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.59s; animation-duration: 1.58s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.08s; animation-duration: 1.09s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.77s; animation-duration: 1.12s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: -0.02s; animation-duration: 0.64s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.79s; animation-duration: 1.1s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.48s; animation-duration: 1.56s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.25s; animation-duration: 1.47s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: -0.03s; animation-duration: 1.24s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.11s; animation-duration: 0.85s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.15s; animation-duration: 1.28s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.74s; animation-duration: 0.71s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5382,10 +5382,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.75s; animation-duration: 0.58s; }
-.line-scale-party > div:nth-child(2) { animation-delay: -0.17s; animation-duration: 1.15s; }
-.line-scale-party > div:nth-child(3) { animation-delay: -0.12s; animation-duration: 1.19s; }
-.line-scale-party > div:nth-child(4) { animation-delay: -0.06s; animation-duration: 0.35s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.65s; animation-duration: 1.24s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.42s; animation-duration: 0.97s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.28s; animation-duration: 0.63s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.1s; animation-duration: 1.01s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
@@ -6352,6 +6352,6 @@ input[type=checkbox].w3-check:disabled + .w3-validate, input[type=radio].w3-radi
 
 .w3-border-pale-blue, .w3-hover-border-pale-blue:hover { border-color: #e7ffff !important; }
 
-.w3-header-card { background-color: #ffffff; padding: 0.01em 16px; margin: 5px 0; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important; }
+.w3-header-card { background-color: #ffffff; padding: 10px 16px; margin: 5px 0; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important; }
 
 /*# sourceMappingURL=style.css.map */
