--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12373,7 +12373,8 @@ input[type=date] {
   transition: 0.5s;
   outline: none;
   border-radius: 4px;
-  line-height: inherit !important; }
+  line-height: inherit !important;
+  padding-bottom: 0px !important; }
   input[type=date]:hover {
     border: 2px solid #1bb1a5; }
 
@@ -13181,32 +13182,32 @@ textarea:focus {
 .ball-grid-beat {
   width: 57px; }
   .ball-grid-beat > div:nth-child(1) {
-    animation-delay: 0.71s;
-    animation-duration: 0.75s; }
+    animation-delay: 0.15s;
+    animation-duration: 1.24s; }
   .ball-grid-beat > div:nth-child(2) {
-    animation-delay: 0.29s;
-    animation-duration: 1.17s; }
+    animation-delay: 0.37s;
+    animation-duration: 0.64s; }
   .ball-grid-beat > div:nth-child(3) {
-    animation-delay: 0.25s;
-    animation-duration: 1.26s; }
+    animation-delay: 0.42s;
+    animation-duration: 1.39s; }
   .ball-grid-beat > div:nth-child(4) {
-    animation-delay: 0.43s;
-    animation-duration: 1.03s; }
+    animation-delay: 0.31s;
+    animation-duration: 0.74s; }
   .ball-grid-beat > div:nth-child(5) {
-    animation-delay: 0.63s;
-    animation-duration: 1.26s; }
+    animation-delay: 0.42s;
+    animation-duration: 1.28s; }
   .ball-grid-beat > div:nth-child(6) {
-    animation-delay: 0.47s;
-    animation-duration: 1.6s; }
+    animation-delay: 0.27s;
+    animation-duration: 1.29s; }
   .ball-grid-beat > div:nth-child(7) {
-    animation-delay: -0.17s;
-    animation-duration: 0.8s; }
+    animation-delay: 0.42s;
+    animation-duration: 0.95s; }
   .ball-grid-beat > div:nth-child(8) {
-    animation-delay: 0.28s;
-    animation-duration: 1.22s; }
+    animation-delay: 0.67s;
+    animation-duration: 0.74s; }
   .ball-grid-beat > div:nth-child(9) {
-    animation-delay: 0.18s;
-    animation-duration: 0.89s; }
+    animation-delay: -0.01s;
+    animation-duration: 1.33s; }
   .ball-grid-beat > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13232,32 +13233,32 @@ textarea:focus {
 .ball-grid-pulse {
   width: 57px; }
   .ball-grid-pulse > div:nth-child(1) {
-    animation-delay: -0.06s;
-    animation-duration: 0.66s; }
+    animation-delay: 0.73s;
+    animation-duration: 1.45s; }
   .ball-grid-pulse > div:nth-child(2) {
-    animation-delay: -0.02s;
-    animation-duration: 0.72s; }
+    animation-delay: 0.39s;
+    animation-duration: 1.22s; }
   .ball-grid-pulse > div:nth-child(3) {
-    animation-delay: 0.04s;
-    animation-duration: 0.88s; }
+    animation-delay: 0.28s;
+    animation-duration: 1.35s; }
   .ball-grid-pulse > div:nth-child(4) {
-    animation-delay: 0.16s;
-    animation-duration: 0.8s; }
+    animation-delay: 0.56s;
+    animation-duration: 1.2s; }
   .ball-grid-pulse > div:nth-child(5) {
-    animation-delay: -0.05s;
-    animation-duration: 1.34s; }
+    animation-delay: 0.02s;
+    animation-duration: 1.11s; }
   .ball-grid-pulse > div:nth-child(6) {
-    animation-delay: 0.66s;
-    animation-duration: 0.85s; }
+    animation-delay: 0.42s;
+    animation-duration: 1.23s; }
   .ball-grid-pulse > div:nth-child(7) {
-    animation-delay: 0.29s;
-    animation-duration: 0.7s; }
+    animation-delay: -0.11s;
+    animation-duration: 0.94s; }
   .ball-grid-pulse > div:nth-child(8) {
-    animation-delay: 0.04s;
-    animation-duration: 0.86s; }
+    animation-delay: -0.09s;
+    animation-duration: 0.65s; }
   .ball-grid-pulse > div:nth-child(9) {
-    animation-delay: 0.03s;
-    animation-duration: 1.28s; }
+    animation-delay: -0.1s;
+    animation-duration: 1.45s; }
   .ball-grid-pulse > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13485,17 +13486,17 @@ textarea:focus {
   100% {
     transform: scale(1); } }
 .line-scale-party > div:nth-child(1) {
-  animation-delay: 0.63s;
-  animation-duration: 0.65s; }
+  animation-delay: 0.46s;
+  animation-duration: 0.99s; }
 .line-scale-party > div:nth-child(2) {
-  animation-delay: 0.51s;
-  animation-duration: 0.86s; }
+  animation-delay: 0.68s;
+  animation-duration: 0.47s; }
 .line-scale-party > div:nth-child(3) {
-  animation-delay: 0.25s;
-  animation-duration: 0.37s; }
+  animation-delay: 0.74s;
+  animation-duration: 0.5s; }
 .line-scale-party > div:nth-child(4) {
-  animation-delay: 0.61s;
-  animation-duration: 0.45s; }
+  animation-delay: 0.34s;
+  animation-duration: 1.25s; }
 .line-scale-party > div {
   background-color: #1bb1a2;
   width: 4px;
