--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13182,32 +13182,32 @@ textarea:focus {
 .ball-grid-beat {
   width: 57px; }
   .ball-grid-beat > div:nth-child(1) {
-    animation-delay: 0.15s;
-    animation-duration: 1.24s; }
+    animation-delay: 0.03s;
+    animation-duration: 0.61s; }
   .ball-grid-beat > div:nth-child(2) {
-    animation-delay: 0.37s;
-    animation-duration: 0.64s; }
+    animation-delay: 0.11s;
+    animation-duration: 0.97s; }
   .ball-grid-beat > div:nth-child(3) {
-    animation-delay: 0.42s;
-    animation-duration: 1.39s; }
+    animation-delay: 0.75s;
+    animation-duration: 1.31s; }
   .ball-grid-beat > div:nth-child(4) {
-    animation-delay: 0.31s;
-    animation-duration: 0.74s; }
-  .ball-grid-beat > div:nth-child(5) {
-    animation-delay: 0.42s;
-    animation-duration: 1.28s; }
-  .ball-grid-beat > div:nth-child(6) {
-    animation-delay: 0.27s;
-    animation-duration: 1.29s; }
-  .ball-grid-beat > div:nth-child(7) {
-    animation-delay: 0.42s;
-    animation-duration: 0.95s; }
-  .ball-grid-beat > div:nth-child(8) {
-    animation-delay: 0.67s;
-    animation-duration: 0.74s; }
-  .ball-grid-beat > div:nth-child(9) {
     animation-delay: -0.01s;
-    animation-duration: 1.33s; }
+    animation-duration: 0.89s; }
+  .ball-grid-beat > div:nth-child(5) {
+    animation-delay: 0s;
+    animation-duration: 1.04s; }
+  .ball-grid-beat > div:nth-child(6) {
+    animation-delay: -0.06s;
+    animation-duration: 1.44s; }
+  .ball-grid-beat > div:nth-child(7) {
+    animation-delay: 0.11s;
+    animation-duration: 1.37s; }
+  .ball-grid-beat > div:nth-child(8) {
+    animation-delay: 0.35s;
+    animation-duration: 0.9s; }
+  .ball-grid-beat > div:nth-child(9) {
+    animation-delay: -0.15s;
+    animation-duration: 1.11s; }
   .ball-grid-beat > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13233,32 +13233,32 @@ textarea:focus {
 .ball-grid-pulse {
   width: 57px; }
   .ball-grid-pulse > div:nth-child(1) {
-    animation-delay: 0.73s;
-    animation-duration: 1.45s; }
+    animation-delay: -0.05s;
+    animation-duration: 1.55s; }
   .ball-grid-pulse > div:nth-child(2) {
-    animation-delay: 0.39s;
-    animation-duration: 1.22s; }
+    animation-delay: 0.08s;
+    animation-duration: 0.92s; }
   .ball-grid-pulse > div:nth-child(3) {
-    animation-delay: 0.28s;
-    animation-duration: 1.35s; }
+    animation-delay: 0.33s;
+    animation-duration: 0.8s; }
   .ball-grid-pulse > div:nth-child(4) {
-    animation-delay: 0.56s;
-    animation-duration: 1.2s; }
+    animation-delay: 0.59s;
+    animation-duration: 0.82s; }
   .ball-grid-pulse > div:nth-child(5) {
-    animation-delay: 0.02s;
-    animation-duration: 1.11s; }
+    animation-delay: -0.18s;
+    animation-duration: 1.52s; }
   .ball-grid-pulse > div:nth-child(6) {
-    animation-delay: 0.42s;
-    animation-duration: 1.23s; }
+    animation-delay: 0.14s;
+    animation-duration: 1.48s; }
   .ball-grid-pulse > div:nth-child(7) {
-    animation-delay: -0.11s;
-    animation-duration: 0.94s; }
+    animation-delay: 0.74s;
+    animation-duration: 1.19s; }
   .ball-grid-pulse > div:nth-child(8) {
-    animation-delay: -0.09s;
-    animation-duration: 0.65s; }
+    animation-delay: 0.8s;
+    animation-duration: 1.01s; }
   .ball-grid-pulse > div:nth-child(9) {
-    animation-delay: -0.1s;
-    animation-duration: 1.45s; }
+    animation-delay: 0.26s;
+    animation-duration: 1.02s; }
   .ball-grid-pulse > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13486,17 +13486,17 @@ textarea:focus {
   100% {
     transform: scale(1); } }
 .line-scale-party > div:nth-child(1) {
-  animation-delay: 0.46s;
-  animation-duration: 0.99s; }
+  animation-delay: 0.5s;
+  animation-duration: 1.02s; }
 .line-scale-party > div:nth-child(2) {
-  animation-delay: 0.68s;
-  animation-duration: 0.47s; }
-.line-scale-party > div:nth-child(3) {
-  animation-delay: 0.74s;
-  animation-duration: 0.5s; }
-.line-scale-party > div:nth-child(4) {
-  animation-delay: 0.34s;
+  animation-delay: 0.69s;
   animation-duration: 1.25s; }
+.line-scale-party > div:nth-child(3) {
+  animation-delay: -0.07s;
+  animation-duration: 1.22s; }
+.line-scale-party > div:nth-child(4) {
+  animation-delay: 0.74s;
+  animation-duration: 0.54s; }
 .line-scale-party > div {
   background-color: #1bb1a2;
   width: 4px;
@@ -13772,7 +13772,8 @@ textarea:focus {
   font-size: large;
   min-height: 50px;
   padding-top: 3%;
-  padding: 0; }
+  padding: 0;
+  height: 75px; }
 
 .menu-expansion {
   background-color: #1bb1a2;
