--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12675,6 +12675,9 @@ textarea:focus {
 .width-100 {
   width: 100px; }
 
+.width-110 {
+  width: 110px; }
+
 .width-200 {
   width: 200px; }
 
@@ -13182,32 +13185,32 @@ textarea:focus {
 .ball-grid-beat {
   width: 57px; }
   .ball-grid-beat > div:nth-child(1) {
-    animation-delay: 0.03s;
-    animation-duration: 0.61s; }
+    animation-delay: 0.52s;
+    animation-duration: 0.76s; }
   .ball-grid-beat > div:nth-child(2) {
-    animation-delay: 0.11s;
-    animation-duration: 0.97s; }
+    animation-delay: 0.5s;
+    animation-duration: 0.86s; }
   .ball-grid-beat > div:nth-child(3) {
-    animation-delay: 0.75s;
-    animation-duration: 1.31s; }
+    animation-delay: 0.32s;
+    animation-duration: 1.29s; }
   .ball-grid-beat > div:nth-child(4) {
-    animation-delay: -0.01s;
-    animation-duration: 0.89s; }
+    animation-delay: 0.07s;
+    animation-duration: 0.97s; }
   .ball-grid-beat > div:nth-child(5) {
-    animation-delay: 0s;
-    animation-duration: 1.04s; }
+    animation-delay: 0.21s;
+    animation-duration: 1.22s; }
   .ball-grid-beat > div:nth-child(6) {
-    animation-delay: -0.06s;
-    animation-duration: 1.44s; }
+    animation-delay: 0.43s;
+    animation-duration: 0.8s; }
   .ball-grid-beat > div:nth-child(7) {
-    animation-delay: 0.11s;
-    animation-duration: 1.37s; }
+    animation-delay: 0.58s;
+    animation-duration: 0.72s; }
   .ball-grid-beat > div:nth-child(8) {
-    animation-delay: 0.35s;
-    animation-duration: 0.9s; }
+    animation-delay: 0.71s;
+    animation-duration: 1.35s; }
   .ball-grid-beat > div:nth-child(9) {
-    animation-delay: -0.15s;
-    animation-duration: 1.11s; }
+    animation-delay: 0.7s;
+    animation-duration: 0.99s; }
   .ball-grid-beat > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13233,32 +13236,32 @@ textarea:focus {
 .ball-grid-pulse {
   width: 57px; }
   .ball-grid-pulse > div:nth-child(1) {
-    animation-delay: -0.05s;
-    animation-duration: 1.55s; }
+    animation-delay: -0.09s;
+    animation-duration: 1.14s; }
   .ball-grid-pulse > div:nth-child(2) {
-    animation-delay: 0.08s;
-    animation-duration: 0.92s; }
+    animation-delay: 0.03s;
+    animation-duration: 0.62s; }
   .ball-grid-pulse > div:nth-child(3) {
-    animation-delay: 0.33s;
-    animation-duration: 0.8s; }
+    animation-delay: 0.43s;
+    animation-duration: 1.22s; }
   .ball-grid-pulse > div:nth-child(4) {
-    animation-delay: 0.59s;
-    animation-duration: 0.82s; }
+    animation-delay: 0.57s;
+    animation-duration: 0.99s; }
   .ball-grid-pulse > div:nth-child(5) {
-    animation-delay: -0.18s;
-    animation-duration: 1.52s; }
+    animation-delay: -0.19s;
+    animation-duration: 0.95s; }
   .ball-grid-pulse > div:nth-child(6) {
-    animation-delay: 0.14s;
-    animation-duration: 1.48s; }
+    animation-delay: 0.63s;
+    animation-duration: 0.73s; }
   .ball-grid-pulse > div:nth-child(7) {
-    animation-delay: 0.74s;
-    animation-duration: 1.19s; }
+    animation-delay: 0.29s;
+    animation-duration: 0.8s; }
   .ball-grid-pulse > div:nth-child(8) {
-    animation-delay: 0.8s;
-    animation-duration: 1.01s; }
+    animation-delay: 0.56s;
+    animation-duration: 1.58s; }
   .ball-grid-pulse > div:nth-child(9) {
-    animation-delay: 0.26s;
-    animation-duration: 1.02s; }
+    animation-delay: 0.54s;
+    animation-duration: 0.81s; }
   .ball-grid-pulse > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13486,17 +13489,17 @@ textarea:focus {
   100% {
     transform: scale(1); } }
 .line-scale-party > div:nth-child(1) {
-  animation-delay: 0.5s;
-  animation-duration: 1.02s; }
+  animation-delay: 0.73s;
+  animation-duration: 0.72s; }
 .line-scale-party > div:nth-child(2) {
-  animation-delay: 0.69s;
-  animation-duration: 1.25s; }
+  animation-delay: -0.17s;
+  animation-duration: 1.21s; }
 .line-scale-party > div:nth-child(3) {
-  animation-delay: -0.07s;
-  animation-duration: 1.22s; }
+  animation-delay: -0.09s;
+  animation-duration: 1.03s; }
 .line-scale-party > div:nth-child(4) {
-  animation-delay: 0.74s;
-  animation-duration: 0.54s; }
+  animation-delay: -0.17s;
+  animation-duration: 1.2s; }
 .line-scale-party > div {
   background-color: #1bb1a2;
   width: 4px;
