--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12678,6 +12678,9 @@ textarea:focus {
 .width-110 {
   width: 110px; }
 
+.width-150 {
+  width: 150px; }
+
 .width-200 {
   width: 200px; }
 
@@ -13185,31 +13188,31 @@ textarea:focus {
 .ball-grid-beat {
   width: 57px; }
   .ball-grid-beat > div:nth-child(1) {
-    animation-delay: 0.52s;
-    animation-duration: 0.76s; }
+    animation-delay: 0.13s;
+    animation-duration: 0.82s; }
   .ball-grid-beat > div:nth-child(2) {
-    animation-delay: 0.5s;
-    animation-duration: 0.86s; }
+    animation-delay: 0.56s;
+    animation-duration: 0.63s; }
   .ball-grid-beat > div:nth-child(3) {
-    animation-delay: 0.32s;
-    animation-duration: 1.29s; }
+    animation-delay: 0.25s;
+    animation-duration: 0.69s; }
   .ball-grid-beat > div:nth-child(4) {
-    animation-delay: 0.07s;
-    animation-duration: 0.97s; }
+    animation-delay: 0.11s;
+    animation-duration: 1.2s; }
   .ball-grid-beat > div:nth-child(5) {
-    animation-delay: 0.21s;
-    animation-duration: 1.22s; }
+    animation-delay: 0.67s;
+    animation-duration: 1.56s; }
   .ball-grid-beat > div:nth-child(6) {
-    animation-delay: 0.43s;
-    animation-duration: 0.8s; }
-  .ball-grid-beat > div:nth-child(7) {
-    animation-delay: 0.58s;
-    animation-duration: 0.72s; }
-  .ball-grid-beat > div:nth-child(8) {
-    animation-delay: 0.71s;
+    animation-delay: -0.03s;
     animation-duration: 1.35s; }
+  .ball-grid-beat > div:nth-child(7) {
+    animation-delay: 0.15s;
+    animation-duration: 1.43s; }
+  .ball-grid-beat > div:nth-child(8) {
+    animation-delay: 0.13s;
+    animation-duration: 1.34s; }
   .ball-grid-beat > div:nth-child(9) {
-    animation-delay: 0.7s;
+    animation-delay: 0.38s;
     animation-duration: 0.99s; }
   .ball-grid-beat > div {
     background-color: #1bb1a2;
@@ -13236,32 +13239,32 @@ textarea:focus {
 .ball-grid-pulse {
   width: 57px; }
   .ball-grid-pulse > div:nth-child(1) {
-    animation-delay: -0.09s;
-    animation-duration: 1.14s; }
+    animation-delay: 0.38s;
+    animation-duration: 0.64s; }
   .ball-grid-pulse > div:nth-child(2) {
-    animation-delay: 0.03s;
-    animation-duration: 0.62s; }
+    animation-delay: 0.49s;
+    animation-duration: 1.19s; }
   .ball-grid-pulse > div:nth-child(3) {
-    animation-delay: 0.43s;
-    animation-duration: 1.22s; }
+    animation-delay: 0.34s;
+    animation-duration: 0.68s; }
   .ball-grid-pulse > div:nth-child(4) {
-    animation-delay: 0.57s;
-    animation-duration: 0.99s; }
+    animation-delay: 0.15s;
+    animation-duration: 1.22s; }
   .ball-grid-pulse > div:nth-child(5) {
-    animation-delay: -0.19s;
-    animation-duration: 0.95s; }
+    animation-delay: 0.13s;
+    animation-duration: 1.45s; }
   .ball-grid-pulse > div:nth-child(6) {
-    animation-delay: 0.63s;
-    animation-duration: 0.73s; }
+    animation-delay: 0.59s;
+    animation-duration: 1.22s; }
   .ball-grid-pulse > div:nth-child(7) {
-    animation-delay: 0.29s;
-    animation-duration: 0.8s; }
+    animation-delay: -0.02s;
+    animation-duration: 1.43s; }
   .ball-grid-pulse > div:nth-child(8) {
-    animation-delay: 0.56s;
-    animation-duration: 1.58s; }
+    animation-delay: 0.62s;
+    animation-duration: 1.47s; }
   .ball-grid-pulse > div:nth-child(9) {
-    animation-delay: 0.54s;
-    animation-duration: 0.81s; }
+    animation-delay: 0.33s;
+    animation-duration: 1.11s; }
   .ball-grid-pulse > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13489,17 +13492,17 @@ textarea:focus {
   100% {
     transform: scale(1); } }
 .line-scale-party > div:nth-child(1) {
-  animation-delay: 0.73s;
-  animation-duration: 0.72s; }
+  animation-delay: 0.1s;
+  animation-duration: 0.66s; }
 .line-scale-party > div:nth-child(2) {
-  animation-delay: -0.17s;
-  animation-duration: 1.21s; }
+  animation-delay: 0.57s;
+  animation-duration: 1.05s; }
 .line-scale-party > div:nth-child(3) {
-  animation-delay: -0.09s;
-  animation-duration: 1.03s; }
+  animation-delay: 0.14s;
+  animation-duration: 1.11s; }
 .line-scale-party > div:nth-child(4) {
-  animation-delay: -0.17s;
-  animation-duration: 1.2s; }
+  animation-delay: -0.03s;
+  animation-duration: 1.03s; }
 .line-scale-party > div {
   background-color: #1bb1a2;
   width: 4px;
