--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12543,7 +12543,10 @@ select::-ms-expand {
   margin-left: 15px; }
 
 .margin-bottom-5 {
-  margin-left: 5px; }
+  margin-bottom: 5px; }
+
+.margin-bottom-10 {
+  margin-bottom: 10px; }
 
 .margin-top-20 {
   margin-top: 20px; }
@@ -12715,9 +12718,6 @@ textarea:focus {
   height: 150px;
   resize: none; }
 
-.height-110 {
-  height: 110px;
- }
 .height-210 {
   height: 210px; }
 
@@ -13191,32 +13191,32 @@ textarea:focus {
 .ball-grid-beat {
   width: 57px; }
   .ball-grid-beat > div:nth-child(1) {
-    animation-delay: 0.13s;
-    animation-duration: 0.82s; }
+    animation-delay: 0.6s;
+    animation-duration: 1.45s; }
   .ball-grid-beat > div:nth-child(2) {
-    animation-delay: 0.56s;
-    animation-duration: 0.63s; }
+    animation-delay: 0.48s;
+    animation-duration: 0.96s; }
   .ball-grid-beat > div:nth-child(3) {
-    animation-delay: 0.25s;
-    animation-duration: 0.69s; }
+    animation-delay: -0.06s;
+    animation-duration: 1.55s; }
   .ball-grid-beat > div:nth-child(4) {
-    animation-delay: 0.11s;
-    animation-duration: 1.2s; }
+    animation-delay: 0.62s;
+    animation-duration: 1.24s; }
   .ball-grid-beat > div:nth-child(5) {
     animation-delay: 0.67s;
-    animation-duration: 1.56s; }
+    animation-duration: 1.03s; }
   .ball-grid-beat > div:nth-child(6) {
-    animation-delay: -0.03s;
-    animation-duration: 1.35s; }
+    animation-delay: 0.4s;
+    animation-duration: 1.08s; }
   .ball-grid-beat > div:nth-child(7) {
-    animation-delay: 0.15s;
-    animation-duration: 1.43s; }
+    animation-delay: 0.03s;
+    animation-duration: 1s; }
   .ball-grid-beat > div:nth-child(8) {
-    animation-delay: 0.13s;
-    animation-duration: 1.34s; }
+    animation-delay: 0.34s;
+    animation-duration: 0.94s; }
   .ball-grid-beat > div:nth-child(9) {
-    animation-delay: 0.38s;
-    animation-duration: 0.99s; }
+    animation-delay: 0.55s;
+    animation-duration: 0.81s; }
   .ball-grid-beat > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13242,32 +13242,32 @@ textarea:focus {
 .ball-grid-pulse {
   width: 57px; }
   .ball-grid-pulse > div:nth-child(1) {
-    animation-delay: 0.38s;
-    animation-duration: 0.64s; }
-  .ball-grid-pulse > div:nth-child(2) {
-    animation-delay: 0.49s;
+    animation-delay: -0.08s;
     animation-duration: 1.19s; }
+  .ball-grid-pulse > div:nth-child(2) {
+    animation-delay: 0.19s;
+    animation-duration: 1.1s; }
   .ball-grid-pulse > div:nth-child(3) {
-    animation-delay: 0.34s;
-    animation-duration: 0.68s; }
-  .ball-grid-pulse > div:nth-child(4) {
-    animation-delay: 0.15s;
-    animation-duration: 1.22s; }
-  .ball-grid-pulse > div:nth-child(5) {
-    animation-delay: 0.13s;
-    animation-duration: 1.45s; }
-  .ball-grid-pulse > div:nth-child(6) {
     animation-delay: 0.59s;
-    animation-duration: 1.22s; }
+    animation-duration: 1.45s; }
+  .ball-grid-pulse > div:nth-child(4) {
+    animation-delay: 0.27s;
+    animation-duration: 0.81s; }
+  .ball-grid-pulse > div:nth-child(5) {
+    animation-delay: 0.06s;
+    animation-duration: 1s; }
+  .ball-grid-pulse > div:nth-child(6) {
+    animation-delay: 0.37s;
+    animation-duration: 1.18s; }
   .ball-grid-pulse > div:nth-child(7) {
-    animation-delay: -0.02s;
-    animation-duration: 1.43s; }
+    animation-delay: 0.39s;
+    animation-duration: 1.06s; }
   .ball-grid-pulse > div:nth-child(8) {
-    animation-delay: 0.62s;
-    animation-duration: 1.47s; }
+    animation-delay: 0.22s;
+    animation-duration: 1.39s; }
   .ball-grid-pulse > div:nth-child(9) {
-    animation-delay: 0.33s;
-    animation-duration: 1.11s; }
+    animation-delay: 0.09s;
+    animation-duration: 1.24s; }
   .ball-grid-pulse > div {
     background-color: #1bb1a2;
     width: 15px;
@@ -13495,17 +13495,17 @@ textarea:focus {
   100% {
     transform: scale(1); } }
 .line-scale-party > div:nth-child(1) {
-  animation-delay: 0.1s;
+  animation-delay: 0.21s;
   animation-duration: 0.66s; }
 .line-scale-party > div:nth-child(2) {
-  animation-delay: 0.57s;
-  animation-duration: 1.05s; }
+  animation-delay: 0.7s;
+  animation-duration: 0.72s; }
 .line-scale-party > div:nth-child(3) {
-  animation-delay: 0.14s;
-  animation-duration: 1.11s; }
+  animation-delay: 0.47s;
+  animation-duration: 1.21s; }
 .line-scale-party > div:nth-child(4) {
-  animation-delay: -0.03s;
-  animation-duration: 1.03s; }
+  animation-delay: 0.18s;
+  animation-duration: 0.69s; }
 .line-scale-party > div {
   background-color: #1bb1a2;
   width: 4px;
